--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -69,6 +69,9 @@
   color: #000;
   margin-bottom: 24px;
   width: 85%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .popup-image__element {
@@ -105,6 +108,9 @@
   width: 100%;
   padding-bottom: 0.7em;
   margin-bottom: 2em;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 600px) {
